add_executable(tmq_map_test tmq_map_test.c)
add_executable(tmq_vec_test tmq_vec_test.c)
add_executable(tmq_timer_test tmq_timer_test.c)
add_executable(tmq_config_test tmq_config_test.c)
add_executable(tmq_cmd_test tmq_cmd_test.c)
add_executable(tmq_topic_test tmq_topic_test.c)

add_executable(tmq_task_exector_test tmq_task_exector_test.c)